# orchestra

./: .gitattributes  .gitignore  .shellcheckrc  AGENTS.md  Cargo.toml  PSScriptAnalyzerSettings.psd1  README.md  code_auditor.md  coder.md  coder.template.md  coder_codex.md  coder_deep.md  coder_fast.md  config.example.md  constraints.example.md  enhancement_scout.md  full_reviewer.md  generate-coders.cmd  generate-coders.ps1  generate-codex-agents.ps1  github_sync.md  knowledge.md  knowledge_curator.md  merger.md  planner.md  processor.md  queue_builder.md  reviewer.md  reviewer_codex.md  reviewer_std.md  thinker.md
.github/workflows/: ci.yml
agents/: code_auditor.md  coder.md  coder.template.md  coder_codex.md  coder_deep.md  coder_fast.md  dependency_curator.md  enhancement_scout.md  executor.md  full_reviewer.md  github_sync.md  inbox_curator.md  knowledge_curator.md  merger.md  planner.md  processor.md  proposal_curator.md  queue_builder.md  reviewer.md  reviewer.template.md  reviewer_codex.md  reviewer_std.md  thinker.md
codex/: README.md  processor.md
codex/agents/: orchestra_coder.toml  orchestra_coder_deep.toml  orchestra_coder_fast.toml  orchestra_dependency_curator.toml  orchestra_executor.toml  orchestra_full_reviewer.toml  orchestra_inbox_curator.toml  orchestra_knowledge_curator.toml  orchestra_merger.toml  orchestra_planner.toml  orchestra_reviewer.toml  orchestra_reviewer_std.toml
docs/: contributing.md  eol.md  inbox_contract.md  operations.md  queue_contract.md  roadmap_contract.md
engine/: Cargo.toml  README.md  deny.toml
engine/src/: claude.rs  codex.rs  contract.rs  jsonline.rs  lease.rs  lib.rs  main.rs  run.rs  supervise.rs  time.rs  toolscript.rs
engine/src/events/: mod.rs  model.rs  parse.rs  reader.rs
engine/src/resolvers/: admission.rs  budget.rs  coder.rs  cycles.rs  gate.rs  mod.rs  reviewer.rs  tiering.rs  vocab.rs
engine/src/state/: batch.rs  canonical.rs  cohort.rs  descriptor.rs  integration.rs  mod.rs  queue.rs  snapshot.rs  util.rs
engine/tests/: events_fixture.rs  join_fixture.rs  lease_default_script.rs  lease_fixture.rs  parser_properties.rs  plan_fixture.rs  review_fixture.rs  run_default_tools.rs  run_fixture.rs  spike_e2e.rs  state_fixture.rs
launchers/: cc-audit.cmd  cc-audit.sh  cc-common.cmd  cc-config.cmd  cc-config.sh  cc-deps.cmd  cc-deps.sh  cc-doctor.cmd  cc-doctor.sh  cc-enhance.cmd  cc-enhance.sh  cc-github.cmd  cc-github.sh  cc-inbox.cmd  cc-inbox.sh  cc-journal.cmd  cc-journal.sh  cc-metrics.cmd  cc-metrics.sh  cc-pause.cmd  cc-pause.sh  cc-processor.cmd  cc-processor.sh  cc-proposal.cmd  cc-proposal.sh  cc-queue.cmd  cc-queue.sh  cc-resume.cmd  cc-resume.sh  cc-status.cmd  cc-status.sh  cc-sync.cmd  cc-sync.sh  cc-thinker.cmd  cc-thinker.sh  cc-unpause.cmd  cc-unpause.sh
plans/: DETERMINISTIC_ORCHESTRATOR_INTENT.md  HERDR_TUI_INTEGRATION_DRAFT.md  LOOP_ORCHESTRA_ROADMAP.md  OBSERVABILITY_PLATFORM_PLAN.md
tests/: test-codex-runtime.ps1  test-common.ps1  test-engine-processor-parity.ps1  test-events-common.ps1  test-harness-crashmatrix.ps1  test-harness.ps1  test-inbox.ps1  test-metrics.ps1  test-outbox.ps1  test-policy.ps1  test-queue-contract-path-guard.ps1  test-redaction.ps1  test-reviewer-codex-gate.ps1  test-supervisor.ps1  test-verification.ps1
tests/launchers/: README.md  common.ps1  run-all.ps1  test-cc-audit.ps1  test-cc-config.ps1  test-cc-deps.ps1  test-cc-doctor.ps1  test-cc-enhance.ps1  test-cc-github.ps1  test-cc-inbox.ps1  test-cc-journal.ps1  test-cc-processor.ps1  test-cc-proposal.ps1  test-cc-queue.ps1  test-cc-resume.ps1  test-cc-status.ps1  test-cc-thinker.ps1  test-codex-processor-runtime.ps1  test-doctor-runtime.ps1  test-generate-coders.ps1  test-generate-codex-agents.ps1  test-launcher-line-endings.ps1  test-posix-launchers.sh  test-processkit-runtime.ps1  test-queue-tx.ps1  test-state-tx.ps1  test-sync-launcher.ps1  test-sync-runtime.ps1
tools/: check-codex-config-guard.ps1  check-codex-runtime-path-guard.ps1  check-codex-sandbox-guard.ps1  check-consistency.ps1  check-queue-contract-path-guard.ps1  codex-preflight.ps1  codex-processor-runtime.ps1  codex-runtime.ps1  common.ps1  doctor-runtime.ps1  events-common.ps1  harness.ps1  inbox.ps1  linearize.ps1  lint-powershell.ps1  metrics.ps1  outbox.ps1  policy-schema.ps1  policy.ps1  proc-tree.ps1  processkit-runtime.ps1  project-registry-lib.ps1  project-registry.ps1  queue-tx.ps1  redaction.ps1  state-tx.ps1  supervisor.ps1  sync-runtime.ps1  validate-agents.ps1  verification.ps1
tui/: .gitignore  Cargo.toml  deny.toml
tui/src/: app.rs  cli.rs  commands.rs  inbox.rs  main.rs  status.rs  terminal.rs  ui.rs
