[package]
name = "orchestra-engine"
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
description = "Initial deterministic-engine primitives: spawn and supervise ONE claude leaf-agent call and ONE codex exec call OUTSIDE Claude Code, with a deadline, maxTurns, structured-output capture and per-invocation permission handling. Validates the subagent spawn/supervise environment (intent doc risk R1) before the headless engine expands."
license = "MIT"
publish = false

# The T-097 spike modules (supervise/claude/codex/contract/jsonline) stay dependency-free by
# design. The `events` module (T-101) is the first step from spike toward engine and pulls in
# `serde_json` for robust parsing of the `.work/events.jsonl` outbox — sanctioned by README.md
# "Spike outcome". Cargo.lock is committed so the offline smoke gate stays green after the one
# initial dependency fetch. The PRODUCTION engine should further adopt the Rust line's
# `processkit` crate (kill-on-drop Job Object / cgroup v2 / process group) for supervision.

[dependencies]
serde_json = "1"

[lib]
name = "orchestra_engine"
path = "src/lib.rs"

[[bin]]
name = "orchestra-engine"
path = "src/main.rs"

[profile.release]
opt-level = 2
