[package]
name = "orchestra-engine"
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
description = "Initial deterministic-engine primitives: spawn and supervise ONE claude leaf-agent call and ONE codex exec call OUTSIDE Claude Code, with a deadline, maxTurns, structured-output capture and per-invocation permission handling. Validates the subagent spawn/supervise environment (intent doc risk R1) before the headless engine expands."
license = "MIT"
publish = false

# Dependencies are kept deliberately lean. `claude/codex/contract/jsonline` stay dependency-free;
# the `events` module (T-101) pulls in `serde_json` for robust parsing of the `.work/events.jsonl`
# outbox (README.md "Spike outcome"); and `supervise` (T-130) uses `libc` — ONLY on Unix — for the
# production no-orphan tree-kill: spawn the child as its own process-group leader and `killpg` the
# whole group on timeout/cancel (the POSIX counterpart to `taskkill /T /F` on Windows). Cargo.lock
# is committed so the offline smoke gate stays green after the one initial dependency fetch. The
# Rust line's async `processkit` crate (kill-on-drop Job Object / cgroup v2 / process group) stays
# the intended substrate once the engine goes async on tokio; it is not pulled in here because it
# is tokio-async and edition-2024 (above this crate's MSRV) while this supervisor is synchronous.

[dependencies]
serde_json = "1"

# Unix-only: the direct `killpg` syscall for the process-group tree-kill above. Not compiled on
# Windows (that path uses `taskkill`), so it never enters the Windows build graph.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Keep the crate's declared Rust 1.74 MSRV: newer proptest releases require newer compilers.
proptest = { version = "=1.0.0", default-features = false, features = ["std"] }

[lib]
name = "orchestra_engine"
path = "src/lib.rs"

[[bin]]
name = "orchestra-engine"
path = "src/main.rs"

[profile.release]
opt-level = 2
