[package]
name = "orchestra-tui"
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
description = "Operator TUI for a running orchestrator: overview plus actionable Decision Inbox, with supervised pause/resume/lease/force-lock and approval decisions."
license = "MIT"
publish = false

# ratatui + crossterm: the operator TUI stack chosen by the intent doc (§6). `ratatui` re-exports
# a matching `crossterm`, but `crossterm` is also declared directly (pinned to the same minor cargo
# unifies) because `main.rs` drives raw-mode / alternate-screen / input directly. The path dep on
# the engine crate reuses `events::TailReader` — the SAME cursor reader the future engine uses —
# so there is zero duplication of the `.work/events.jsonl` tail/dedup/torn-tail logic (T-101).
# `serde_json` is pulled directly only to read opaque event `payload` fields (Map<String, Value>);
# it is already in the workspace lock via the engine dep, so no new transitive surface. The root
# Cargo.lock is committed so that after the ONE initial online fetch the build/test smoke gate
# stays offline (see engine/README.md).
[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1"
orchestra-engine = { version = "0.0.1", path = "../engine" }

[[bin]]
name = "orchestra-tui"
path = "src/main.rs"
